// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AchievementList > renders 1`] = `
"<div data-v-1c120264="" class="achievement-list">
  <div data-v-1c120264="">
    <p data-v-1c120264="" class="achievement-list__label">The Completionist</p>
    <div data-v-1c120264="" class="achievement-list__badge-container">
      <div data-v-06381b3c="" data-v-1c120264="" class="badge" aria-disabled="true" title="40 Unique veggies" aria-label="40 Unique veggies" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--bronze"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🐣</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">40 Veggies</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" class="badge" aria-disabled="true" title="80 Unique veggies" aria-label="80 Unique veggies" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--silver"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🐥</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">80 Veggies</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" class="badge" aria-disabled="true" title="150 Unique veggies" aria-label="150 Unique veggies" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--gold"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🦅</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">150 Veggies</div>
      </div>
    </div>
  </div>
  <div data-v-1c120264="">
    <p data-v-1c120264="" class="achievement-list__label">Hot Streak</p>
    <div data-v-1c120264="" class="achievement-list__badge-container">
      <div data-v-06381b3c="" data-v-1c120264="" class="badge" aria-disabled="true" title="5 Week streak of over 30 veggies" aria-label="5 Week streak of over 30 veggies" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--bronze"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🌶️</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">5 Weeks</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" class="badge" aria-disabled="true" title="10 Week streak of over 30 veggies" aria-label="10 Week streak of over 30 veggies" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--silver"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🔥</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">10 Weeks</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" class="badge" aria-disabled="true" title="20 Week streak of over 30 veggies" aria-label="20 Week streak of over 30 veggies" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--gold"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🌋</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">20 Weeks</div>
      </div>
    </div>
  </div>
  <div data-v-1c120264="">
    <p data-v-1c120264="" class="achievement-list__label">The Experimenter</p>
    <div data-v-1c120264="" class="achievement-list__badge-container">
      <div data-v-06381b3c="" data-v-1c120264="" class="badge" aria-disabled="true" title="15 Unique fruits" aria-label="15 Unique fruits" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--gold"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🍎</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Fruits</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" class="badge" aria-disabled="true" title="15 Unique vegetables" aria-label="15 Unique vegetables" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--gold"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🥦</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Vegetables</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" class="badge" aria-disabled="true" title="15 Unique leafy greens" aria-label="15 Unique leafy greens" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--gold"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🥬</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Greens</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" class="badge" aria-disabled="true" title="15 Unique beans and legumes" aria-label="15 Unique beans and legumes" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--gold"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🫛</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Beans</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" class="badge" aria-disabled="true" title="15 Unique grains, nuts and seeds" aria-label="15 Unique grains, nuts and seeds" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--gold"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🌾</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Grains</div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`AchievementList > renders with badges enabled 1`] = `
"<div data-v-1c120264="" class="achievement-list">
  <div data-v-1c120264="">
    <p data-v-1c120264="" class="achievement-list__label">The Completionist</p>
    <div data-v-1c120264="" class="achievement-list__badge-container">
      <div data-v-06381b3c="" data-v-1c120264="" class="badge" aria-disabled="false" title="40 Unique veggies" aria-label="40 Unique veggies" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--bronze"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🐣</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">40 Veggies</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" class="badge" aria-disabled="true" title="80 Unique veggies" aria-label="80 Unique veggies" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--silver"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🐥</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">80 Veggies</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" class="badge" aria-disabled="true" title="150 Unique veggies" aria-label="150 Unique veggies" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--gold"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🦅</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">150 Veggies</div>
      </div>
    </div>
  </div>
  <div data-v-1c120264="">
    <p data-v-1c120264="" class="achievement-list__label">Hot Streak</p>
    <div data-v-1c120264="" class="achievement-list__badge-container">
      <div data-v-06381b3c="" data-v-1c120264="" class="badge" aria-disabled="true" title="5 Week streak of over 30 veggies" aria-label="5 Week streak of over 30 veggies" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--bronze"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🌶️</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">5 Weeks</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" class="badge" aria-disabled="true" title="10 Week streak of over 30 veggies" aria-label="10 Week streak of over 30 veggies" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--silver"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🔥</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">10 Weeks</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" class="badge" aria-disabled="true" title="20 Week streak of over 30 veggies" aria-label="20 Week streak of over 30 veggies" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--gold"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🌋</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">20 Weeks</div>
      </div>
    </div>
  </div>
  <div data-v-1c120264="">
    <p data-v-1c120264="" class="achievement-list__label">The Experimenter</p>
    <div data-v-1c120264="" class="achievement-list__badge-container">
      <div data-v-06381b3c="" data-v-1c120264="" class="badge" aria-disabled="false" title="15 Unique fruits" aria-label="15 Unique fruits" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--gold"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🍎</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Fruits</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" class="badge" aria-disabled="false" title="15 Unique vegetables" aria-label="15 Unique vegetables" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--gold"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🥦</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Vegetables</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" class="badge" aria-disabled="false" title="15 Unique leafy greens" aria-label="15 Unique leafy greens" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--gold"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🥬</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Greens</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" class="badge" aria-disabled="false" title="15 Unique beans and legumes" aria-label="15 Unique beans and legumes" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--gold"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🫛</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Beans</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" class="badge" aria-disabled="false" title="15 Unique grains, nuts and seeds" aria-label="15 Unique grains, nuts and seeds" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--gold"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🌾</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Grains</div>
      </div>
    </div>
  </div>
</div>"
`;
